--- a/Web-App/index.html
+++ b/Web-App/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plant Predictor</title>
+    <title>Medicinal Plant Predictor</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Plant Predictor</h1>
+        <h1>Medicinal Plant Predictor</h1>
         <input type="file" id="imageInput" accept="image/*" onchange="handleFileSelect(event)">
         <!--<button id="cameraButton" onclick="openCamera()">Take Photo</button>-->
         <div id="previewContainer" class="preview-container">
